# genkitx-readability

./: .gitignore  pyproject.toml
.agents/skills/auto-commit/: SKILL.md
src/genkitx_readability/: __init__.py
