[project]
name = "genkitx-readability"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "rojoyin", email = "rojoyin@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
genkitx-readability = "genkitx_readability:main"

[build-system]
requires = ["uv_build>=0.10.11,<0.11.0"]
build-backend = "uv_build"
